<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/popupMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/settings"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/more"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/timerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center_horizontal"
            android:text="@string/zero_time"
            android:textColor="#000000"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/recordListText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="60dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerText">


            <TextView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/section"
                android:textSize="16sp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/record"
                android:textSize="16sp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/totalTime"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/recordListBar"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:animateLayoutChanges="true"
            android:contentDescription="@string/bar"
            android:scaleX="28"
            app:layout_constraintBottom_toTopOf="@+id/scrollView4"
            app:layout_constraintEnd_toEndOf="@+id/recordListText"
            app:layout_constraintStart_toStartOf="@+id/recordListText"
            app:layout_constraintTop_toBottomOf="@+id/recordListText"
            app:srcCompat="@android:drawable/divider_horizontal_textfield"
            tools:ignore="ImageContrastCheck" />

        <ScrollView
            android:id="@+id/scrollView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="80dp"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recordListText"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:id="@+id/recordList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/recordAndResetBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_start"
                android:backgroundTint="#EDEDED"
                android:hapticFeedbackEnabled="true"
                android:text="@string/record"
                android:textColor="#767676"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/startAndStopBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_start"
                android:hapticFeedbackEnabled="true"
                android:text="@string/start"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>